--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=smartedu_server
 
-#Kingbase
+# PostgreSQL/Kingbase
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://172.18.227.80:54321/smartedubase
 
